# NativeServiceArchitecture

./: CMakeLists.txt  LICENSE.md  README.md
include/: Service.hpp
src/: BlockingQueue.hpp  BlockingQueueTest.cpp  Example01.cpp  Example02.cpp  Service.hpp  dummy.cpp
unit/: BlockingQueueTest.cpp
